# PBL2

./: Appointment.h  CMakeLists.txt  Clinic.cpp  Clinic.h  Date.cpp  Date.h  Invoice.cpp  Invoice.h  InvoiceItem.cpp  InvoiceItem.h  Makefile.win  Patient.cpp  Patient.h  Project2.dev  README.md  Staff.cpp  Staff.h  TimeHM.cpp  TimeHM.h  Utils.cpp  Utils.h  chaythu.cpp  core.cpp  core.h  main.cpp  projectpbl2.dev  projectpbl2.layout  test2.cpp
New folder/: Appointment.cpp
